Code cleanup, after #64.